# Trident

./: .env.example  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/services/: events.rs
crates/indexer/: Cargo.toml  Dockerfile
crates/indexer/src/: config.rs  main.rs
crates/indexer/src/db/: mod.rs
crates/indexer/src/parser/: mod.rs
crates/indexer/src/redis_stream/: mod.rs
crates/indexer/src/streamer/: mod.rs
database/migrations/: 0002_system_state_health.sql
docker/: docker-compose.yml
docs/: SPECIFICATION.md  deployment.md
load-tests/: pgbouncer-validation.js
proto/: buf.gen.yaml
sdk/react/: package-lock.json  package.json  vitest.config.ts
sdk/react/tests/: hooks.test.tsx
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: index.ts  subscription.ts
sdk/typescript/tests/: client.test.ts
services/api/: Dockerfile  go.mod  go.sum  main.go  pgbouncer.go
services/api/cursor/: cursor.go  cursor_test.go
services/api/grpc/: client.go
services/api/grpcclient/: client.go
services/api/handlers/: admin.go  admin_test.go  events.go  events_test.go  health.go  health_test.go  integration_test.go  stream.go  stream_integration_test.go  stream_test.go
services/api/internal/httputil/: errors.go  errors_test.go
services/api/middleware/: auth.go  auth_test.go  middleware.go  middleware_test.go  ratelimit.go
services/api/validation/: events.go  events_test.go
services/api/ws/: consumer.go  handler.go  hub.go  hub_test.go
