[package]
name = "trident-api"
version = "0.1.0"
edition = "2021"

[dependencies]
trident-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Types
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
